Adds nicer/bigger font Renames Primitives3D to 2D Changes colors to something more appropriate Resized textbox Adds Arsenal.spritefont Updates README.md

--- a/Textbox-Test/Textbox-Test.csproj
+++ b/Textbox-Test/Textbox-Test.csproj
@@ -46,7 +46,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Game1.cs" />
-    <Compile Include="Primitives3D.cs" />
+    <Compile Include="Primitives2D.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -65,6 +65,7 @@
     <MonoGameContentReference Include="Content\Content.mgcb" />
     <None Include="app.config" />
     <None Include="app.manifest" />
+    <None Include="Content\Arsenal.spritefont" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
