--- a/MonoGame-Textbox/packages.config
+++ b/MonoGame-Textbox/packages.config
@@ -1,13 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="JetBrains.Annotations" version="10.2.1" targetFramework="net451" />
-  <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
-  <package id="SharpDX" version="2.6.3" targetFramework="net451" />
-  <package id="SharpDX.Direct2D1" version="2.6.3" targetFramework="net451" />
-  <package id="SharpDX.Direct3D11" version="2.6.3" targetFramework="net451" />
-  <package id="SharpDX.Direct3D9" version="2.6.3" targetFramework="net451" />
-  <package id="SharpDX.DXGI" version="2.6.3" targetFramework="net451" />
-  <package id="SharpDX.MediaFoundation" version="2.6.3" targetFramework="net451" />
-  <package id="SharpDX.XAudio2" version="2.6.3" targetFramework="net451" />
-  <package id="SharpDX.XInput" version="2.6.3" targetFramework="net451" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net461" />
+  <package id="MonoGame.Framework.Portable" version="3.6.0.1625" targetFramework="net461" />
 </packages>
