--- a/Textbox-Test/packages.config
+++ b/Textbox-Test/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MonoGame.Framework.WindowsDX" version="3.6.0.1625" targetFramework="net461" />
+  <package id="JetBrains.Annotations" version="11.1.0" targetFramework="net461" />
+  <package id="MonoGame.Framework.DesktopGL" version="3.6.0.1625" targetFramework="net461" />
 </packages>
